--- a/ABLCloudStaff/ABLCloudStaff.Tests/ABLCloudStaff.Tests.csproj
+++ b/ABLCloudStaff/ABLCloudStaff.Tests/ABLCloudStaff.Tests.csproj
@@ -90,6 +90,7 @@
     <Reference Include="System.Net.Http.WebRequest" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Board_Logic\ChangeLogUtilitiesTest.cs" />
     <Compile Include="Board_Logic\CoreUtilitiesTest.cs" />
     <Compile Include="Board_Logic\UserUtilitiesTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
