--- a/ABLCloudStaff/ABLCloudStaff.Tests/ABLCloudStaff.Tests.csproj
+++ b/ABLCloudStaff/ABLCloudStaff.Tests/ABLCloudStaff.Tests.csproj
@@ -92,6 +92,8 @@
   <ItemGroup>
     <Compile Include="Board_Logic\ChangeLogUtilitiesTest.cs" />
     <Compile Include="Board_Logic\CoreUtilitiesTest.cs" />
+    <Compile Include="Board_Logic\LocationUtilitiesTest.cs" />
+    <Compile Include="Board_Logic\StatusUtilitiesTest.cs" />
     <Compile Include="Board_Logic\UserUtilitiesTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
