--- a/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
+++ b/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
@@ -181,6 +181,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\bg.png" />
+    <Content Include="Scripts\add_status_form.js" />
     <Content Include="Scripts\add_user_form.js" />
     <Content Include="Scripts\all_statuses_table.js" />
     <Content Include="Scripts\bootstrap-switch.min.js" />
