--- a/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
+++ b/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
@@ -143,6 +143,7 @@
     </Compile>
     <Compile Include="Models\ABLCloudStaffContext.cs" />
     <Compile Include="Models\Core.cs" />
+    <Compile Include="Models\CreateABLCloudStaffIfNotExists.cs" />
     <Compile Include="Models\DropCreateABLCloudStaffAlways.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\LocationChangeLog.cs" />
