--- a/ABLCloudStaff/ABLCloudStaff/Views/web.config
+++ b/ABLCloudStaff/ABLCloudStaff/Views/web.config
@@ -31,5 +31,8 @@
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
+    <staticContent>
+      <mimeMap fileExtension=".less" mimeType="text/css" />
+    </staticContent >
   </system.webServer>
 </configuration>
