--- a/ABLCloudStaff/ABLCloudStaff/Web.config
+++ b/ABLCloudStaff/ABLCloudStaff/Web.config
@@ -11,8 +11,13 @@
   <system.webServer>
     <staticContent>
       <mimeMap fileExtension=".less" mimeType="text/css" />
-    </staticContent >
-  </system.webServer>
+    </staticContent>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
