--- a/ABLCloudStaff/ABLCloudStaff.API/ABLCloudStaff.API.csproj
+++ b/ABLCloudStaff/ABLCloudStaff.API/ABLCloudStaff.API.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CloudStaffApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -184,7 +185,12 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ABLCloudStaff\ABLCloudStaff.csproj">
+      <Project>{ee8779ab-4107-4bdb-aa8e-cd5aba81c22b}</Project>
+      <Name>ABLCloudStaff</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
