business logic refactored

--- a/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
+++ b/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
@@ -143,14 +143,14 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Board_Logic\AuthenticationUtilities.cs" />
-    <Compile Include="Board_Logic\ChangeLogUtilities.cs" />
-    <Compile Include="Board_Logic\Constants.cs" />
-    <Compile Include="Board_Logic\CoreUtilities.cs" />
-    <Compile Include="Board_Logic\DateTimeUtilities.cs" />
-    <Compile Include="Board_Logic\LocationUtilities.cs" />
-    <Compile Include="Board_Logic\StatusUtilities.cs" />
-    <Compile Include="Board_Logic\UserUtilities.cs" />
+    <Compile Include="Biz_Logic\AuthenticationUtilities.cs" />
+    <Compile Include="Biz_Logic\ChangeLogUtilities.cs" />
+    <Compile Include="Biz_Logic\Constants.cs" />
+    <Compile Include="Biz_Logic\CoreUtilities.cs" />
+    <Compile Include="Biz_Logic\DateTimeUtilities.cs" />
+    <Compile Include="Biz_Logic\LocationUtilities.cs" />
+    <Compile Include="Biz_Logic\StatusUtilities.cs" />
+    <Compile Include="Biz_Logic\UserUtilities.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CloudStaffApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
