password hashing, salting and verifying functions implemented and tested

--- a/ABLCloudStaff/ABLCloudStaff.Tests/ABLCloudStaff.Tests.csproj
+++ b/ABLCloudStaff/ABLCloudStaff.Tests/ABLCloudStaff.Tests.csproj
@@ -90,11 +90,12 @@
     <Reference Include="System.Net.Http.WebRequest" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Board_Logic\ChangeLogUtilitiesTest.cs" />
-    <Compile Include="Board_Logic\CoreUtilitiesTest.cs" />
-    <Compile Include="Board_Logic\LocationUtilitiesTest.cs" />
-    <Compile Include="Board_Logic\StatusUtilitiesTest.cs" />
-    <Compile Include="Board_Logic\UserUtilitiesTest.cs" />
+    <Compile Include="Biz_Logic\ChangeLogUtilitiesTest.cs" />
+    <Compile Include="Biz_Logic\CoreUtilitiesTest.cs" />
+    <Compile Include="Biz_Logic\LocationUtilitiesTest.cs" />
+    <Compile Include="Biz_Logic\StatusUtilitiesTest.cs" />
+    <Compile Include="Biz_Logic\AuthenticationUtilitiesTest.cs" />
+    <Compile Include="Biz_Logic\UserUtilitiesTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
