--- a/ABLCloudStaff/ABLCloudStaff.Tests/ABLCloudStaff.Tests.csproj
+++ b/ABLCloudStaff/ABLCloudStaff.Tests/ABLCloudStaff.Tests.csproj
@@ -97,7 +97,6 @@
     <Compile Include="Biz_Logic\AuthenticationUtilitiesTest.cs" />
     <Compile Include="Biz_Logic\UserUtilitiesTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -110,6 +109,9 @@
       <Project>{EE8779AB-4107-4BDB-AA8E-CD5ABA81C22B}</Project>
       <Name>ABLCloudStaff</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
