scrubbed innerexception gathering from biz logic

--- a/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
+++ b/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Biz_Logic\CoreUtilities.cs" />
     <Compile Include="Biz_Logic\DateTimeUtilities.cs" />
     <Compile Include="Biz_Logic\EncryptionUtilities.cs" />
+    <Compile Include="Biz_Logic\ErrorUtilities.cs" />
     <Compile Include="Biz_Logic\LocationUtilities.cs" />
     <Compile Include="Biz_Logic\StatusUtilities.cs" />
     <Compile Include="Biz_Logic\UserUtilities.cs" />
@@ -164,6 +165,7 @@
     <Compile Include="Models\Core.cs" />
     <Compile Include="Models\CreateABLCloudStaffIfNotExists.cs" />
     <Compile Include="Models\DropCreateABLCloudStaffAlways.cs" />
+    <Compile Include="Models\Error.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\LocationChangeLog.cs" />
     <Compile Include="Models\Status.cs" />
