--- a/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
+++ b/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
@@ -214,6 +214,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\bg.png" />
+    <Content Include="Scripts\Groups\add_group.js" />
     <Content Include="Scripts\Groups\see_groups.js" />
     <Content Include="Scripts\add_location_autocomplete.js" />
     <Content Include="Scripts\add_location_form.js" />
