--- a/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
+++ b/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
@@ -217,6 +217,7 @@
     <Content Include="Images\bg.png" />
     <Content Include="Scripts\bootstrap-multiselect.js" />
     <Content Include="Scripts\Groups\add_group.js" />
+    <Content Include="Scripts\Groups\fill_group_table.js" />
     <Content Include="Scripts\Groups\see_groups.js" />
     <Content Include="Scripts\add_location_autocomplete.js" />
     <Content Include="Scripts\add_location_form.js" />
