--- a/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
+++ b/ABLCloudStaff/ABLCloudStaff/ABLCloudStaff.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CloudStaffApiController.cs" />
     <Compile Include="Controllers\DisplaySmallController.cs" />
+    <Compile Include="Controllers\EmergencyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginAdminController.cs" />
     <Compile Include="Global.asax.cs">
@@ -285,6 +286,7 @@
     <Content Include="Views\Admin\Admin.cshtml" />
     <Content Include="Views\LoginAdmin\LoginAdmin.cshtml" />
     <Content Include="Views\DisplaySmall\DisplaySmall.cshtml" />
+    <Content Include="Views\Emergency\Emergency.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
